--- a/.gitignore
+++ b/.gitignore
@@ -44,7 +44,8 @@ frontend/npm-debug.log*
 frontend/yarn-debug.log*
 frontend/yarn-error.log*
 
-backend/database
-!./backend/database/dbdump.sql
+!backend/database/
+backend/database/*
+!backend/database/dbdumps/
 
 .vscode
