--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,7 @@ services:
         ports:
             - "8080:80"
         volumes:
-            - "./backend/server:/var/www/html"
+            - "./backend/server/php:/var/www/html"
         restart: always
         extra_hosts:
             - "host.docker.internal:host-gateway"
