--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,9 @@
 
 # dependencies
 /node_modules
+**/node_modules
+**/npm-debug.log
+build
 /.pnp
 .pnp.js
 
@@ -45,9 +48,7 @@ frontend/npm-debug.log*
 frontend/yarn-debug.log*
 frontend/yarn-error.log*
 
-!backend/database/
-backend/database/*
-!backend/database/dbdumps/
+backend/database/.mysql_data
 
 .vscode
 
@@ -124,4 +125,6 @@ coverage
 !build/.gitkeep
 .env
 .DS_Store
->>>>>>> 1d7c60bae045e10111cc049add5fa33a00fbfa49
+
+# ides and tools
+.tool-versions
