fix mysql and react container errors

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,28 +1,32 @@
-version: "3.8"
+version: "3.9"
 services:
-    node-webserver:
-        build: "./frontend"
-        container_name: node-webserver
-        ports:
-            - "3000:3000"
-        volumes:
-            - "./frontend:/app"
-        restart: always
     php-server:
         build: "./backend/server"
         ports:
             - "8080:80"
         volumes:
             - "./backend/server/php:/var/www/html"
-        restart: always
         extra_hosts:
             - "host.docker.internal:host-gateway"
+        depends_on:
+            - mysql-db
     mysql-db:
-        image: mysql:8.0
+        build: "./backend/database"
         ports:
-            - "3306:3306"
+            - 3306:3306
         volumes:
-            - "./backend/database:/var/lib/mysql"
+            - ./backend/database/.mysql_data:/var/lib/mysql
         environment:
             - MYSQL_ROOT_PASSWORD=27112021
-        restart: always
+    node-webserver:
+        build:
+            context: "./frontend"
+            target: development
+        container_name: node-webserver
+        ports:
+            - "3000:3000"
+        volumes:
+            - "./frontend/src:/app/src"
+        depends_on:
+            - mysql-db
+            - php-server
