--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,11 +11,12 @@ services:
         depends_on:
             - mysql-db
     mysql-db:
-        build: "./backend/database"
+        image: mysql:8.0
         ports:
             - 3306:3306
         volumes:
             - "db_data:/var/lib/mysql"
+            - "./backend/database/dbdumps/dbdump_latest.sql:/docker-entrypoint-initdb.d/"
         environment:
             - MYSQL_ROOT_PASSWORD=27112021
     node-webserver:
