--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,8 +2,8 @@ version: "3.9"
 services:
   php-server:
     build:
-      context: "./backend/server"
-      target: server
+      context: "./backend"
+      target: php-server
     ports:
       - "8080:80"
     volumes:
@@ -23,8 +23,8 @@ services:
 
   php-script:
     build:
-      context: "./backend/server"
-      target: script
+      context: "./backend"
+      target: php-script
     profiles:
       - bash_php
     volumes:
@@ -40,6 +40,7 @@ services:
       - "./backend/database/dbdumps/dbdump_latest.sql:/docker-entrypoint-initdb.d/dbdump_latest.sql"
     environment:
       - MYSQL_ROOT_PASSWORD=27112021
+
   node-webserver:
     build:
       context: "./frontend"
